--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -112,6 +112,7 @@ main{
     font-size: 3.5rem;
     line-height: 4rem;
     text-align: center;
+    padding-top: 50px;
   }
 }
 
@@ -131,6 +132,7 @@ main{
     line-height: 3rem;
     text-align: center;
     width: 100%;
+    padding-top: 50px;
   }
 
   .gratuity-name-card {
@@ -145,7 +147,7 @@ main{
 
   .gratuity-name-card input {
     font-size: 0.95rem;
-    max-width: 100%;
+    max-width: 80%;
   }
 
   .gratuity-name-card button {
